# xivbookmarkdl

./: .dockerignore  .gitignore  Dockerfile  README.md  exec.sh  main.py  pyproject.toml  requirements.in  requirements.txt  template.env
.github/workflows/: build.yml  docker.yml  lint.yml
xivbookmarkdl/: cli.py  main.py
xivbookmarkdl/dao/: illust_binary.py  illust_meta.py
xivbookmarkdl/storage/: base.py  filesystem.py  s3.py
