[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]

[tool.mypy]
strict = true

[tool.uv]
package = true
add-bounds = "exact"

[tool.setuptools]
packages = ["xivbookmarkdl"]

[project]
name = "xivbookmarkdl"
version = "0.0.0"
description = "Bookmark saver"
readme = "README.md"
authors = [
    {name = "aoirint", email = "aoirint@gmail.com"}
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "pydantic==2.10.6",
  "pixivpy3==3.7.5",
  "boto3==1.37.16",
  "python-dotenv==1.0.1",
]

[project.urls]
Repository = "https://github.com/aoirint/liveinfo_api_middleware"

[dependency-groups]
dev = [
  "mypy==1.15.0",
  "pytest==8.3.5",
  "boto3-stubs[s3]==1.37.16",
  "ruff==0.11.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
