[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]

[tool.mypy]
strict = true

[tool.uv]
package = true
add-bounds = "exact"

[tool.setuptools.packages.find]
where = ["."]
include = ["xivbookmarkdl", "xivbookmarkdl.*"]

[project]
name = "xivbookmarkdl"
version = "0.5.1"
description = "Bookmark saver"
readme = "README.md"
authors = [
    {name = "aoirint", email = "aoirint@gmail.com"}
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "pydantic==2.12.5",
  "pixivpy3==3.7.5",
  "boto3==1.42.4",
  "python-dotenv==1.2.1",
]

[project.urls]
Repository = "https://github.com/aoirint/xivbookmarkdl"

[dependency-groups]
dev = [
  "mypy==1.19.0",
  "pytest==9.0.2",
  "boto3-stubs[s3]==1.42.4",
  "ruff==0.14.8",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
